# panel-3dmol

./: LICENSE  README.md  animation_example.py  debug_comm_usage.md  dual_viewer_with_labels.py  example_user_labels.py  pyproject.toml  refactored_animated_viewer.py  release.txt  test_labels.py  test_viewer.py  trajectory_example.py
.github/workflows/: test.yml
notebooks/: panel_dashboard_example.ipynb  test_jupyterlite.ipynb
panel_3dmol/: __init__.py  viewer.py
tests/: simple_test.py  test_mol3dviewer.py  test_plugin.py
